manifests/writer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: writer
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data-pvc
  containers:
    - name: shell
      image: alpine:3.20
      command: ["/bin/sh", "-c"]
      args:
        - while true; do echo "$(date) - written by $HOSTNAME" >> /data/log.txt; sleep 5; done
      volumeMounts:
        - name: data
          mountPath: /data
